fix: eliminate grid-gap in dashboard
This streamlines the dashboard a bit.

--- a/plugins/plugin-codeflare/web/scss/components/Dashboard/_index.scss
+++ b/plugins/plugin-codeflare/web/scss/components/Dashboard/_index.scss
@@ -31,6 +31,10 @@
   flex: 1;
 }
 
+@include SplitContainer {
+  grid-gap: 0;
+}
+
 @include Scrollback {
   @include Block {
     @include IsMaximized {
